--- a/app/src/main/res/layout/activity_tkb.xml
+++ b/app/src/main/res/layout/activity_tkb.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/hoem_page"
-    tools:context=".tkbieu_Activity"
+    tools:context=".ThoiKhoaBieu_Module.tkbieu_Activity"
 
     >
 
@@ -27,7 +27,6 @@
             android:textSize="24dp"
             android:textStyle="bold" />
 
-
         <ImageButton
             android:id="@+id/back_header"
             android:layout_width="50dp"
@@ -36,7 +35,6 @@
             android:maxHeight="30dp"
             android:src="@drawable/back1_left" />
     </RelativeLayout>
-
 
     <RelativeLayout
         android:id="@+id/layout_body"
@@ -51,9 +49,11 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:orientation="horizontal"
+            android:weightSum="6"
             android:padding="8dp">
 
             <RelativeLayout
+                android:layout_weight="1"
                 android:id="@+id/btn_t2"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -70,6 +70,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:layout_weight="1"
                 android:id="@+id/btn_t3"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -87,6 +88,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:layout_weight="1"
                 android:id="@+id/btn_t4"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -104,6 +106,8 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:layout_weight="1"
+                android:id="@+id/btn_t5"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="8dp"
@@ -120,6 +124,8 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:layout_weight="1"
+                android:id="@+id/btn_t6"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="8dp"
@@ -138,6 +144,8 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:layout_weight="1"
+                android:id="@+id/btn_t7"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="8dp"
@@ -154,80 +162,15 @@
 
                 </TextView>
             </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="8dp"
-                android:background="@drawable/boderday">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="CN"
-                    android:textColor="@color/light_font"
-                    android:textSize="24dp"
-                    android:textStyle="bold">
-
-                </TextView>
-            </RelativeLayout>
         </LinearLayout>
 
-        <RelativeLayout
+        <FrameLayout
             android:id="@+id/fragment_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/day">
-
-        </RelativeLayout>
+        </FrameLayout>
 
     </RelativeLayout>
-    <LinearLayout
-        android:id="@+id/layout_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/bottom_rec"
-        android:orientation="horizontal"
-        android:weightSum="4">
 
-        <ImageButton
-            android:id="@+id/button_homepage"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/trangchu"
-            tools:ignore="SpeakableTextPresentCheck">
-
-        </ImageButton>
-
-        <ImageButton
-            android:id="@+id/button_notification"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/thongbao"
-            tools:ignore="SpeakableTextPresentCheck">
-        </ImageButton>
-        <ImageButton
-            android:id="@+id/button_chatbox"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/chat"
-            tools:ignore="SpeakableTextPresentCheck">
-        </ImageButton>
-        <ImageButton
-            android:id="@+id/button_student"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/student"
-            tools:ignore="SpeakableTextPresentCheck" />
-    </LinearLayout>
 </RelativeLayout>
