--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -23,11 +23,12 @@
         android:layout_marginTop="50dp"/>
 
         <EditText
+            android:id="@+id/txtforgot"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:background="@drawable/edittext_edit"
-            android:hint="Student Email"
+            android:hint="Nhập mail sinh viên"
             android:paddingLeft="20dp"
             android:layout_marginTop="100dp"
             android:inputType="textEmailAddress"/>
@@ -36,7 +37,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:background="@drawable/button_edit"
-            android:text="Continue"
+            android:text="Hoàn thành"
             android:layout_marginTop="150dp"
             android:layout_gravity="center"
             android:textColor="@color/white"
